--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,13 @@
   pointer-events: none;
 }
 
+
+.select{
+  width: 26rem;
+  padding: 10px;
+  margin-bottom: -10px;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
